# Skladchi0

./: .env.example  Create CRM web application structure.html  README.md  README_Version2.md  main.py  pyproject.toml  render.yaml  render.yaml.txt  requirements.txt
Create CRM web application structure_files/: saved_resource.html
admin_users/: __init__.py  handlers.py  keyboards.py
bazasidata/: mongodb.py
config/: __init__.py  settings.py
database/: __init__.py  mongodb.py
groups/: __init__.py  handlers.py  keyboards.py
handlers/: ___init___.py  __init__.py  admin_handlers.py  callback_handlers.py  common_handlers.py  message_handlers.py  user_handlers.py
holat/: admin_holati.py  foydalanuvchi_holati.py
keyboards/: __init__.py  admin_keyboards.py  telebot_keyboards.py  user_keyboards.py
konfiguratsiya/: sozlamalar.py
obralovchilar/: admin_obralovchi.py  umumiy_obralovchi.py
states/: __init__.py  admin_states.py  user_states.py
static/: app.js  style.css
templates/: _inventory_table.html  _orders_table.html  base.html  customers.html  dashboard.html  employees.html  expenses.html  finished_products.html  inventory.html  management.html  orders.html  products.html  raw_materials.html  reports.html
tugmalar/: admin_tugmalar.py  foydalanuvchi_tugmalar.py
web/: __init__.py  app_links.py  routes.py
