[tool.poetry]
name = "inventory-bot"
version = "1.0.0"
description = "Ombor mahsulotlarini boshqarish boti"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.4"
pymongo = "4.5.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"