[tool.poetry]
name = "inventory-bot"
version = "1.0.0"
description = "Ombor mahsulotlarini boshqarish boti"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pyTelegramBotAPI = "4.20.0"
Flask = "3.0.0"
pymongo = "4.6.0"
python-dotenv = "1.0.0"
requests = "2.31.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"